fix animation overflowing

--- a/src/assets/styles/components/_status.scss
+++ b/src/assets/styles/components/_status.scss
@@ -1,3 +1,5 @@
+@use "../utils/mixins";
+
 .status {
   font-family: "DotGothic16", monospace;
   list-style-type: none !important;
@@ -18,6 +20,10 @@
     &:hover {
       opacity: 0.7;
     }
+  }
+
+  li {
+    @include mixins.hyphenate;
   }
 
   cite {
